package com.wetjens.gwt.api;

public interface Action {
}
